--- a/index.html
+++ b/index.html
@@ -1,32 +1,14 @@
 <html>
 <link href="./duet.css" rel="stylesheet"/>
 <meta charset="UTF-8">
- <head>
- 	<h1>FREE HEALTH</h1>
- 	<h2>LOSING never felt so good</h2>
- </head>
- <br>
- <br>
- <div id="gamearea">
- <canvas></canvas>
-</div>
- <div id="nav">
- <ul>
- 	<li class="head" ><a href="firstuser.html" class="nav1">First-time?</a></li>
- 	<li class="head" ><a href="calcalc.html" class="nav1">Calorie Calculator</a></li>
- </ul>
-</div>
  <body class="Moments">
  	<div id="intro">
- <section style="font-weight: bold;">Do you like it when you have a fever and can’t go out to play?</section> <br>Of course not! No one likes being sick!<br>However, despite trying our best, at times we do fall sick!<br><br><strong>You can never predict</strong><br><br>
-
- Health is a state of complete physical, mental and social well being.<br> For a healthy life cycle, a person needs to have a balanced diet and has to regularly exercise.<br>So, how do we ensure that we are doing all the right things to have a good health? 
+       <p style="font-weight: bold;">score:</p>
+       <p id="score" style="font-weight: bold;"></p>
    </div>
+   <div id="gamearea">
+   	<canvas></canvas>
+</div>
 <script type="text/javascript" src="canvas.js"></script>
 <body/>	
-<div id="foot">
-<footer>
-        Made with Care and Love - Mei
-</footer>
-</div>
 </html>
