--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
 <meta charset="UTF-8">
  <body class="Moments">
  	<div id="cover">
+    <p style="font-size: 40px;">Duo Duet</p>
+    <br>
  	<form>
- 	<p>Enter playername</p>
+    <label>Enter playername</label>
+    <br>
     <input type="text" id="username"/>
+    <br>
     <br>
  	<input type="button" value="SOLO" id="solo" onclick="gamearea(),playsolo()"/>
     <br>
- 	<p>Enter player1 name</p>
- 	<input type="text" id="username1"/><br>
- 	<p>Enter player2 name</p><br>
- 	<input type="text" id="username2"/><br>
+    <br>
+    <br>
+  <label>Enter player1 name</label>
+  <br>
+ 	<input type="text" id="username1"/>
+  <br>
+  <br>
+ 	<label>Enter player2 name</label>
+  <br>
+ 	<input type="text" id="username2"/>
+  <br>
+  <br>
  	<input type="button" value="DUAL" id="dual" onclick="gamearea(),playdual()"/>
  </form>
  </div>
@@ -20,12 +32,14 @@
    	<div id="scoreboard">
    		<table id="SB">
    			 <tr>
-                 <td>PLAYER</td>
-                 <td>SCORE</td>
+                 <th>PLAYER</th>
+                 <th>SCORE</th>
              </tr>
    		</table>
     </div>
+    <div id="play">
    	<canvas></canvas>
+   </div>
    </div>
 <script type="text/javascript" src="canvas.js"></script>
 <body/>	
